<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/action_general_text">
        <menu>
            <item
                android:id="@+id/action_theme"
                android:icon="@drawable/ic_slide_theme"
                android:title="@string/action_theme_text" />
        </menu>
    </item>

    <item
        android:id="@+id/action_tools"
        android:icon="@drawable/ic_slide_tools"
        android:title="@string/action_tools_text" />
    <item
        android:id="@+id/action_recycle_bin"
        android:icon="@drawable/ic_slide_recycle_bin"
        android:title="@string/action_recycle_bin_text" />
    <item
        android:id="@+id/action_material"
        android:icon="@drawable/ic_slide_material"
        android:title="@string/action_material_text" />
    <item
        android:id="@+id/action_donate"
        android:icon="@drawable/ic_slide_donate"
        android:title="@string/action_donate_text" />

    <item android:title="@string/action_other_text">
        <menu>
            <item
                android:id="@+id/action_setting"
                android:icon="@drawable/ic_slide_setting"
                android:title="@string/action_setting_text" />
            <item
                android:id="@+id/action_about"
                android:icon="@drawable/ic_slide_about"
                android:title="@string/action_about_text" />
            <item
                android:id="@+id/action_share"
                android:icon="@drawable/ic_slide_share"
                android:title="@string/action_share_text" />
        </menu>
    </item>

</menu>
