<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.DirsActivity">
    <item
        android:id="@+id/action_add_dir"
        android:orderInCategory="100"
        android:title="@string/action_add_dir_text"
        android:icon="@drawable/ic_btn_add_dir"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_setting"
        android:orderInCategory="100"
        android:title="@string/action_setting_text"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about_text"
        app:showAsAction="never" />

</menu>