<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_about"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorToolBar"
        android:theme="@style/Base.Theme.AppCompat.Light"
        app:navigationIcon="@drawable/ic_btn_back"
        app:subtitleTextColor="#fff"
        app:title="@string/app_name"
        app:titleTextColor="@color/colorActionBarTitle" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/ic_launcher_rem"
                android:contentDescription="@string/img_content_description" />

            <TextView
                android:id="@+id/tv_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:text="@string/app_version"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_logo" />

            <TextView
                android:id="@+id/tv_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                app:layout_constraintTop_toBottomOf="@id/tv_version"
                app:layout_constraintEnd_toEndOf="@id/tv_version"
                android:textSize="12sp"
                android:text="@string/about_app_author"/>

            <View
                android:id="@+id/divider_line"
                android:layout_width="0dp"
                android:layout_height="1px"
                android:layout_marginTop="13dp"
                android:background="@color/colorDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_author" />

            <TextView
                android:id="@+id/tv_aboutApp_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider_line"
                android:textSize="12sp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/about_app_title"/>

            <TextView
                android:id="@+id/tv_aboutApp_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/shape_bg_about_text_01"
                android:padding="5dp"
                android:text="@string/about_app_content"
                android:textColor="@color/colorWhite"
                android:textSize="12sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_aboutApp_title" />

            <TextView
                android:id="@+id/tv_aboutAuthor_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_aboutApp_content"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp"
                android:text="@string/about_author_title" />

            <TextView
                android:id="@+id/tv_aboutAuthor_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="12dp"
                android:background="@drawable/shape_bg_about_text_03"
                android:padding="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_aboutAuthor_title"
                android:text="@string/about_author_content"
                android:textSize="12sp"
                android:textColor="@color/colorWhite"/>

            <TextView
                android:id="@+id/tv_thanks_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_aboutAuthor_content"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp"
                android:text="@string/thanks_title"/>

            <TextView
                android:id="@+id/tv_thanks_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="15dp"
                android:padding="5dp"
                android:background="@drawable/shape_bg_about_text_02"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_thanks_title"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/thanks_content"
                android:textSize="12sp"
                android:textColor="@color/colorWhite"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>