<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_dialog"
    android:orientation="vertical" >

    <!--标题-->
    <TextView
        android:id="@+id/tv_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|start"
        android:padding="12dp"
        android:layout_marginTop="0dp"
        android:text="@string/dialog_title"
        android:textSize="19sp"
        android:textColor="#000000"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:orientation="vertical">

        <!--激活码-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:layout_marginStart="5dp"
                android:textSize="15sp"
                android:text="@string/dir_name"/>
            <EditText
                android:id="@+id/edit_dir_name"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/MyEditText"
                android:textCursorDrawable="@drawable/shape_edittext_cursor"
                android:maxLines="1"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="6dp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/colorLine"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dialog_cancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shape_dialog_bottomleft"
            android:gravity="center"
            android:layout_weight="1.0"
            android:text="@string/cancel"
            android:textSize="16sp"
            android:textColor="#000000"/>

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/colorLine"/>

        <TextView
            android:id="@+id/dialog_conform"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shape_dialog_bottomright"
            android:gravity="center"
            android:layout_weight="1.0"
            android:text="@string/conform"
            android:textSize="16sp"
            android:textColor="@color/colorAccent"/>


    </LinearLayout>


</LinearLayout>